# triple_accel

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  bench_fast.sh  build_fast.sh  build_ir_asm.sh
.github/workflows/: build_triple_accel.yml  rust.yml
benches/: jewel_benchmarks.rs  rand_benchmarks.rs  struct_benchmarks.rs
src/: hamming.rs  jewel.rs  levenshtein.rs  lib.rs  triple_accel.rs
tests/: basic_tests.rs  rand_benchmarks.rs
