[package]
name = "triple_accel"
version = "0.1.0"
authors = ["c0deb0t <daniel.liu02@gmail.com>"]
edition = "2018"

[features]
# automatic selection of which type of Jewel vector to use by default
default = ["jewel-avx", "jewel-sse", "jewel-8bit", "jewel-16bit", "jewel-32bit"]
jewel-avx = []
jewel-sse = []
jewel-8bit = []
jewel-16bit = []
jewel-32bit = []

[profile.release]
opt-level = 3
codegen-units = 1

[[bench]]
name = "rand_benchmarks"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

